tests/deprecated-enum-utility/deprecated-enum-utility.exp
Error ---------------------------------------------------------------------------------- deprecated-enum-utility.js:3:10

`$Enum<...>` is deprecated, use `$Keys<...>` instead (the functionality is identical). (`deprecated-enum-utility`)

   3| type T = $Enum<{A: string}>; // error
               ^^^^^^^^^^^^^^^^^^



Found 1 error
