tests/deprecated-enum-utility/deprecated-enum-utility.js
/* @flow */

type T = $Enum<{A: string}>; // error
type S = $Keys<{A: string}>; // no error
